// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoTip overview 1 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
  padding: 0;
  line-height: normal;
  background-color: transparent;
  color: #5c6ac4;
  margin-left: 8px;
  margin-right: 8px;
}

<div
    style="display: inline-block;"
  >
    <button
      aria-label="Johnny Oberbrunner"
      class="emotion-0"
    >
      <svg
        aria-hidden="true"
        class="octicon"
        fill="currentColor"
        height="26"
        role="img"
        style="display: inline-block; user-select: none; vertical-align: text-bottom;"
        viewBox="0 0 24 24"
        width="26"
      >
        <path
          d="M13 7.5a1 1 0 11-2 0 1 1 0 012 0zm-3 3.75a.75.75 0 01.75-.75h1.5a.75.75 0 01.75.75v4.25h.75a.75.75 0 010 1.5h-3a.75.75 0 010-1.5h.75V12h-.75a.75.75 0 01-.75-.75z"
        />
        <path
          d="M12 1C5.925 1 1 5.925 1 12s4.925 11 11 11 11-4.925 11-11S18.075 1 12 1zM2.5 12a9.5 9.5 0 1119 0 9.5 9.5 0 01-19 0z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InfoTip overview 2 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
  padding: 0;
  line-height: normal;
  background-color: transparent;
  color: #5c6ac4;
  margin-left: 8px;
  margin-right: 8px;
}

<div
    style="display: inline-block;"
  >
    <button
      aria-label="Jolie Beahan Sr."
      class="emotion-0"
    >
      <svg
        aria-hidden="true"
        class="octicon"
        fill="currentColor"
        height="15"
        role="img"
        style="display: inline-block; user-select: none; vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="15"
      >
        <path
          d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm6.5-.25A.75.75 0 017.25 7h1a.75.75 0 01.75.75v2.75h.25a.75.75 0 010 1.5h-2a.75.75 0 010-1.5h.25v-2h-.25a.75.75 0 01-.75-.75zM8 6a1 1 0 100-2 1 1 0 000 2z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InfoTip overview 3 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
  padding: 0;
  line-height: normal;
  background-color: transparent;
  color: #5c6ac4;
  margin-left: 8px;
  margin-right: 8px;
}

<div
    style="display: inline-block;"
  >
    <button
      aria-label="Cleo Lindgren"
      class="emotion-0"
    >
      <svg
        aria-hidden="true"
        class="octicon"
        fill="currentColor"
        height="21"
        role="img"
        style="display: inline-block; user-select: none; vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="21"
      >
        <path
          d="M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm6.5-.25A.75.75 0 017.25 7h1a.75.75 0 01.75.75v2.75h.25a.75.75 0 010 1.5h-2a.75.75 0 010-1.5h.25v-2h-.25a.75.75 0 01-.75-.75zM8 6a1 1 0 100-2 1 1 0 000 2z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InfoTip overview 4 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
  padding: 0;
  line-height: normal;
  background-color: transparent;
  color: #5c6ac4;
  margin-left: 8px;
  margin-right: 8px;
}

<div
    style="display: inline-block;"
  >
    <button
      aria-label="Tyler Blanda"
      class="emotion-0"
    >
      <svg
        aria-hidden="true"
        class="octicon"
        fill="currentColor"
        height="27"
        role="img"
        style="display: inline-block; user-select: none; vertical-align: text-bottom;"
        viewBox="0 0 24 24"
        width="27"
      >
        <path
          d="M13 7.5a1 1 0 11-2 0 1 1 0 012 0zm-3 3.75a.75.75 0 01.75-.75h1.5a.75.75 0 01.75.75v4.25h.75a.75.75 0 010 1.5h-3a.75.75 0 010-1.5h.75V12h-.75a.75.75 0 01-.75-.75z"
        />
        <path
          d="M12 1C5.925 1 1 5.925 1 12s4.925 11 11 11 11-4.925 11-11S18.075 1 12 1zM2.5 12a9.5 9.5 0 1119 0 9.5 9.5 0 01-19 0z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InfoTip overview 5 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
  padding: 0;
  line-height: normal;
  background-color: transparent;
  color: #5c6ac4;
  margin-left: 8px;
  margin-right: 8px;
}

<div
    style="display: inline-block;"
  >
    <button
      aria-label="Krista Zulauf"
      class="emotion-0"
    >
      <svg
        aria-hidden="true"
        class="octicon"
        fill="currentColor"
        height="32"
        role="img"
        style="display: inline-block; user-select: none; vertical-align: text-bottom;"
        viewBox="0 0 24 24"
        width="32"
      >
        <path
          d="M13 7.5a1 1 0 11-2 0 1 1 0 012 0zm-3 3.75a.75.75 0 01.75-.75h1.5a.75.75 0 01.75.75v4.25h.75a.75.75 0 010 1.5h-3a.75.75 0 010-1.5h.75V12h-.75a.75.75 0 01-.75-.75z"
        />
        <path
          d="M12 1C5.925 1 1 5.925 1 12s4.925 11 11 11 11-4.925 11-11S18.075 1 12 1zM2.5 12a9.5 9.5 0 1119 0 9.5 9.5 0 01-19 0z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
